# coinex_mcp_server

./: .gitignore  README.md  README_cn.md  main.py  pyproject.toml  pytest.ini
src/coinex_mcp_server/: __init__.py  main.py
tests/: TestSpec.md  __init__.py  conftest.py  test_authentication.py  test_error_handling.py  test_futures_market_data.py  test_main_tools.py  test_spot_market_data.py
