[project]
name = "coinex-mcp-server"
version = "0.1.0"
description = "CoinEx cryptocurrency exchange MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp==2.12.4",
    "python-dotenv>=1.1.1",
    "pydantic>=2.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "pytest-asyncio>=1.2.0",
]
