[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "coinex-mcp-server"
version = "0.1.0a5"
description = "A CoinEx MCP (Model Context Protocol) server that enables AI agents to interact with the CoinEx cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "CoinEx MCP Contributors"}
]
maintainers = [
    {name = "CoinEx MCP Contributors"}
]
keywords = [
    "coinex",
    "mcp",
    "model-context-protocol",
    "cryptocurrency",
    "exchange",
    "trading",
    "api",
    "fastmcp",
    "ai-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.28.1",
    "fastmcp==2.12.4",
    "python-dotenv>=1.1.1",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/coinexcom/coinex_mcp_server"
Repository = "https://github.com/coinexcom/coinex_mcp_server"
Documentation = "https://github.com/coinexcom/coinex_mcp_server#readme"
"Bug Tracker" = "https://github.com/coinexcom/coinex_mcp_server/issues"

# MCP servers are typically launched by MCP clients (e.g., Claude Desktop)
# rather than as standalone CLI tools, so we don't define entry points here.
# Users should configure the server in their MCP client settings or run it
# directly with: python -m coinex_mcp_server.main

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "pytest-asyncio>=1.2.0",
]
